--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
   <div id="offcanvas-nav" uk-offcanvas="overlay: true">
     <div class="uk-offcanvas-bar uk-background-primary uk-light">
       <ul class="uk-nav">
-        <li class="uk-active"><a id="reset-game" style="font-size: large;" href="#">Reset</a></li>
         <li class="uk-active"><a id="timed-game" style="font-size: large;" href="#">Play a Timed Game</a></li>
+        <li class="uk-active"><a id="reset-game" style="font-size: large;" href="#">Reset</a></li>
+        <li class="uk-active"><a id="about" style="font-size: large;" href="#">About</a></li>
       </ul>
     </div>
   </div>
@@ -76,7 +77,8 @@
 
   <!-- Feedback modal -->
   <div id="result-modal" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body uk-animation-slide-bottom-small uk-text-center" style="margin-top: 440px;">
+    <div class="uk-modal-dialog uk-modal-body uk-animation-slide-bottom-small uk-text-center"
+      style="margin-top: 440px;">
       <h2 id="result-title" class="uk-modal-title"></h2>
       <p id="result-detail"></p>
       <button class="uk-button uk-button-primary uk-modal-close uk-width-1-1" type="button">Next</button>
@@ -96,6 +98,14 @@
       <p id="final-score">Your score: 0</p>
       <button class="uk-button uk-button-primary uk-width-1-1"
         onclick="UIkit.modal('#score-modal').hide()">Close</button>
+    </div>
+  </div>
+
+  <div id="about-modal" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body uk-text-center">
+      <h3 class="uk-modal-title">About</h3>
+      <p class="uk-text-small uk-text-muted">Justin thought of this</p>
+      <button class="uk-button uk-button-secondary uk-width-1-1" onclick="UIkit.modal('#about-modal').hide()">OK</button>
     </div>
   </div>
 
@@ -202,6 +212,12 @@
     startCountdown();
   });
 
+  document.getElementById('about').addEventListener('click', function (e) {
+    e.preventDefault();
+    UIkit.modal('#about-modal').show();
+  });
+
+
   function startCountdown(seconds = 20) {
     function updateTimerDisplay(sec) {
       const mins = Math.floor(sec / 60).toString().padStart(2, '0');
@@ -220,7 +236,7 @@
         gameOver();
       }
     }, 1000);
-    
+
   }
 
   function gameOver() {
