--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       padding: 0px;
     }
 
+    .app-container {
+      padding-left: 12px;
+      padding-right: 12px;
+      max-width: 480px;
+      margin: 0 auto;
+    }
+
     .title-bar {
       font-size: 1.2rem;
     }
@@ -31,6 +38,13 @@
       padding: 14px;
       font-size: 1rem;
     }
+
+    .choice-selected {
+      background-color: slategray !important;
+      /* UIKit primary blue */
+      color: white !important;
+      border-color: slategray !important;
+    }
   </style>
 </head>
 
@@ -40,7 +54,7 @@
   <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-bottom title-bar uk-background-muted"
     style="position: relative;">
     <!-- Left: hamburger -->
-    <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle></a>
+    <a class="uk-navbar-toggle uk-margin-left" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle></a>
 
     <!-- Center: WAR GAME (absolutely centered) -->
     <div class="uk-text-center" style="position: absolute; left: 50%; transform: translateX(-50%);">
@@ -49,66 +63,70 @@
     </div>
 
     <!-- Right: score -->
-    <div id="score" class="score-display">Score: 0</div>
+    <div id="score" class="score-display  uk-margin-right">Score: 0</div>
   </div>
 
-  <!-- Menu -->
-  <div id="offcanvas-nav" uk-offcanvas="overlay: true">
-    <div class="uk-offcanvas-bar uk-background-primary uk-light">
-      <ul class="uk-nav">
-        <li class="uk-active"><a id="timed-game" style="font-size: large;" href="#">Play a Timed Game</a></li>
-        <li class="uk-active"><a id="reset-game" style="font-size: large;" href="#">Reset</a></li>
-        <li class="uk-active"><a id="about" style="font-size: large;" href="#">About</a></li>
-      </ul>
+  <div class="app-container">
+
+    <!-- Menu -->
+    <div id="offcanvas-nav" uk-offcanvas="overlay: true">
+      <div class="uk-offcanvas-bar uk-background-primary uk-light">
+        <ul class="uk-nav">
+          <li class="uk-active"><a id="timed-game" style="font-size: large;" href="#">Play a Timed Game</a></li>
+          <li class="uk-active"><a id="reset-game" style="font-size: large;" href="#">Reset</a></li>
+          <li class="uk-active"><a id="about" style="font-size: large;" href="#">About</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-  <p id="question" class="uk-margin-small-top uk-margin-small-bottom uk-text-center">
-    Which player has the highest WAR?
-  </p>
+    <p id="question" class="uk-margin-small-top uk-margin-small-bottom uk-text-center">
+      Which player has the highest WAR?
+    </p>
 
-  <!-- Answer buttons -->
-  <div>
-    <button id="choice-0" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
-    <button id="choice-1" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
-    <button id="choice-2" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
-    <button id="choice-3" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
-  </div>
-
-  <!-- Feedback modal -->
-  <div id="result-modal" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body uk-animation-slide-bottom-small uk-text-center"
-      style="margin-top: 440px;">
-      <h2 id="result-title" class="uk-modal-title"></h2>
-      <p id="result-detail"></p>
-      <button class="uk-button uk-button-primary uk-modal-close uk-width-1-1" type="button">Next</button>
+    <!-- Answer buttons -->
+    <div>
+      <button id="choice-0" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
+      <button id="choice-1" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
+      <button id="choice-2" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
+      <button id="choice-3" class="uk-button uk-button-default uk-width-1-1 uk-margin-small-bottom"></button>
     </div>
-  </div>
 
-  <div id="ready-modal" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body uk-text-center">
-      <h2 class="uk-modal-title">Ready?</h2>
-      <button class="uk-button uk-button-primary uk-width-1-1" id="play-button">Play</button>
+    <!-- result modal -->
+    <div id="result-modal" hidden
+      style="position: fixed; inset: 0; background: transparent; z-index: 999; display: flex; justify-content: center; align-items: flex-end; padding: calc(env(safe-area-inset-bottom) + 60px) 12px 20px;">
+      <div class="uk-card uk-card-default uk-card-body uk-text-center uk-animation-slide-bottom-small"
+        style="width: 100%; max-width: 380px;">
+        <h2 id="result-title" class="uk-modal-title"></h2>
+        <p id="result-detail"></p>
+        <button class="uk-button uk-button-primary uk-width-1-1" type="button" onclick="hideResultModal()">Next</button>
+      </div>
     </div>
-  </div>
 
-  <div id="score-modal" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body uk-text-center">
-      <h2 class="uk-modal-title">Game Over</h2>
-      <p id="final-score">Your score: 0</p>
-      <button class="uk-button uk-button-primary uk-width-1-1"
-        onclick="UIkit.modal('#score-modal').hide()">Close</button>
+    <div id="ready-modal" uk-modal>
+      <div class="uk-modal-dialog uk-modal-body uk-text-center">
+        <h2 class="uk-modal-title">Ready?</h2>
+        <button class="uk-button uk-button-primary uk-width-1-1" id="play-button">Play</button>
+      </div>
     </div>
-  </div>
 
-  <div id="about-modal" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body uk-text-center">
-      <h3 class="uk-modal-title">About</h3>
-      <p class="uk-text-small uk-text-muted">Justin thought of this</p>
-      <button class="uk-button uk-button-secondary uk-width-1-1" onclick="UIkit.modal('#about-modal').hide()">OK</button>
+    <div id="score-modal" uk-modal>
+      <div class="uk-modal-dialog uk-modal-body uk-text-center">
+        <h2 class="uk-modal-title">Game Over</h2>
+        <p id="final-score">Your score: 0</p>
+        <button class="uk-button uk-button-primary uk-width-1-1"
+          onclick="UIkit.modal('#score-modal').hide()">Close</button>
+      </div>
     </div>
-  </div>
 
+    <div id="about-modal" uk-modal>
+      <div class="uk-modal-dialog uk-modal-body uk-text-center">
+        <h3 class="uk-modal-title">About</h3>
+        <p class="uk-text-small uk-text-muted">Justin thought of this</p>
+        <button class="uk-button uk-button-secondary uk-width-1-1"
+          onclick="UIkit.modal('#about-modal').hide()">OK</button>
+      </div>
+    </div>
+  </div> <!-- app-container -->
 </body>
 
 <script>
@@ -143,7 +161,6 @@
   function handleChoice(index) {
     count++;
     updateScore();
-    const modal = UIkit.modal('#result-modal');
     const titleEl = document.getElementById('result-title');
     const detailEl = document.getElementById('result-detail');
     const correctPlayer = currentPlayers[correctIndex];
@@ -161,11 +178,12 @@
     // Show WARs for all players
     for (let i = 0; i < 4; i++) {
       const btn = document.getElementById(`choice-${i}`);
+      btn.classList.toggle('choice-selected', i === index);
       const player = currentPlayers[i];
       btn.textContent = `${player.name} (${player.war})`;
     }
 
-    modal.show();
+    document.getElementById('result-modal').hidden = false;
   }
 
   function reset() {
@@ -179,6 +197,13 @@
   function updateScore() {
     const scoreEl = document.getElementById('score');
     scoreEl.textContent = `Score: ${score} / ${count}`;
+  }
+
+  function hideResultModal() {
+    document.getElementById('result-modal').hidden = true;
+    for (let i = 0; i < 4; i++) {
+      document.getElementById(`choice-${i}`).classList.remove('choice-selected');
+    }
   }
 
   for (let i = 0; i < 4; i++) {
