bug between questions

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
     for (let i = 0; i < 4; i++) {
       document.getElementById(`choice-${i}`).classList.remove('choice-selected');
     }
+    generateRound();
   }
 
   for (let i = 0; i < 4; i++) {
