--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <div id="about-modal" uk-modal>
       <div class="uk-modal-dialog uk-modal-body uk-text-center">
         <h3 class="uk-modal-title">About</h3>
-        <p class="uk-text-muted">
-          Justin came up with this. <strong>WAR</strong> stands for <span class="uk-text-italic">Wins Above Replacement</span> — a stat every baseball nerd must know. Do you? Let's find out.
+        <p>
+          Justin came up with this. <strong>WAR</strong> stands for <span class="uk-text-italic">Wins Above Replacement</span> — a stat every baseball nerd must know. Do you?
         </p>
         <button class="uk-button uk-button-primary uk-width-1-1"
           onclick="UIkit.modal('#about-modal').hide()">OK</button>
