--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
     </div>
 
     <!-- Score modal -->
-    <div id="score-modal" uk-modal>
+    <div id="score-modal" uk-modal="bg-close: false; esc-close: false">
       <div class="uk-modal-dialog uk-modal-body uk-text-center">
         <h2 class="uk-modal-title">Game Over</h2>
         <p id="final-score">Your score: 0</p>
         <button class="uk-button uk-button-primary uk-width-1-1"
-          onclick="UIkit.modal('#score-modal').hide()">Close</button>
+          onclick="UIkit.modal('#score-modal').hide()">Reset</button>
       </div>
     </div>
 
