--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
 
   <!-- Title bar -->
-  <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-bottom title-bar" style="color: white; background-color: var(--dark-tan);">
-    <a class="uk-navbar-toggle uk-margin-left" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle style="color: white;"></a>
+  <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-bottom title-bar"
+    style="color: white; background-color: var(--dark-tan);">
+    <a class="uk-navbar-toggle uk-margin-left" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle
+      style="color: white;"></a>
 
     <div class="uk-text-center center-title">
       <div class="uk-text-bold">WAR GAME</div>
@@ -80,10 +82,12 @@
     <!-- About modal -->
     <div id="about-modal" uk-modal>
       <div class="uk-modal-dialog uk-modal-body uk-text-center">
-        <h3 class="uk-modal-title">About</h3>
+        <h3>About</h3>
+        <img src="assets/justin.jpeg" class="uk-border-rounded uk-align-center uk-margin-small-bottom" width="120"
+          alt="Justin">
         <p>
           Justin came up with this. <strong>WAR</strong> stands for <span class="uk-text-italic">Wins Above
-            Replacement</span> — a stat every baseball nerd must know. Do you?
+            Replacement</span> — a stat every baseball nerd must know. How well do you know WAR stats?
         </p>
         <button class="uk-button uk-button-primary uk-width-1-1"
           onclick="UIkit.modal('#about-modal').hide()">OK</button>
