beta of multistat

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div>
           <div class="uk-flex uk-flex-between uk-flex-middle uk-margin-small-top">
             <label class="uk-margin-remove">
-              <input class="uk-checkbox filter-group" type="checkbox" data-target="stats"> Stats
+              <input class="uk-checkbox filter-group" type="checkbox" data-target="stats"> Stats to Quiz
             </label>
             <a href="#" class="toggle-sublist" aria-label="Toggle section">+</a>
           </div>
